--- a/index.html
+++ b/index.html
@@ -30,5 +30,20 @@
                 </div>
             </div>    
         </div>
+
+        <!-- 头部 -->
+         <div class="header">
+            <div class="container clearfix">
+                <div class="logo leftfix">
+                    <img src="./images/assets/logo.png" alt="鲸嘻gmall"/>
+                </div>
+                <div class="search rightfix">
+                    <form action="#">
+                        <input type="text">
+                        <button></button>
+                    </form>
+                </div>
+            </div>
+         </div>
     </body>
 </html>
