主导航&主内容区

--- a/index.html
+++ b/index.html
@@ -45,5 +45,176 @@
                 </div>
             </div>
          </div>
+
+         <!-- 主导航 -->
+        <div class="main-bar">
+            <div class="container clearfix">
+                <div class="all-types leftfix">
+                    全部用品分类
+                </div>
+                <ul class="specific-types leftfix clearfix">
+                    <li><a rel="#">优惠券</a></li>
+                    <li><a rel="#">买啥</a></li>
+                    <li><a rel="#">家电</a></li>
+                    <li><a rel="#">会员</a></li>
+                    <li><a rel="#">进口好物</a></li>
+                    <li><a rel="#">拍卖</a></li>
+                </ul>
+            </div>
+          </div>
+          
+          <!-- 内容区 -->
+          <div class="content">
+            <div class="container clearfix">
+                <ul class="side-nav leftfix">
+                    <li>
+                        <a rel="#">手机/运营商/数码</a>
+                        <div class="second-menu">
+                            <dl class="clearfix">
+                                <dt><a rel="#">智能机</a></dt>
+                                <dd><a rel="#">小米手机</a></dd>
+                                <dd><a rel="#">华为手机</a></dd>
+                                <dd><a rel="#">苹果手机</a></dd>
+                                <dd><a rel="#">三星手机</a></dd>
+                            </dl>
+                            <dl class="clearfix">
+                                <dt><a rel="#">话费流量</a></dt>
+                                <dd><a rel="#">中国移动</a></dd>
+                                <dd><a rel="#">中国联通</a></dd>
+                                <dd><a rel="#">中国电信</a></dd>
+                                <dd><a rel="#">call伴侣</a></dd>
+                            </dl>
+                            <dl class="clearfix">
+                                <dt><a rel="#">数码产品</a></dt>
+                                <dd><a rel="#">单反</a></dd>
+                                <dd><a rel="#">长焦</a></dd>
+                                <dd><a rel="#">拍立得</a></dd>
+                                <dd><a rel="#">手持</a></dd>
+                            </dl>
+                            <dl class="clearfix">
+                                <dt><a rel="#">电脑</a></dt>
+                                <dd><a rel="#">华硕</a></dd>
+                                <dd><a rel="#">外星人</a></dd>
+                                <dd><a rel="#">黛儿der</a></dd>
+                                <dd><a rel="#">Mac</a></dd>
+                            </dl>
+                            <dl class="clearfix">
+                                <dt><a rel="#">显示器</a></dt>
+                                <dd><a rel="#">小显示器</a></dd>
+                                <dd><a rel="#">中显示器</a></dd>
+                                <dd><a rel="#">大显示器</a></dd>
+                            </dl>
+                            <dl class="clearfix">
+                                <dt><a rel="#">游戏机</a></dt>
+                                <dd><a rel="#">switch</a></dd>
+                                <dd><a rel="#">PS5</a></dd>
+                                <dd><a rel="#">XBOX</a></dd>
+                                <dd><a rel="#">xss</a></dd>
+                            </dl>
+                        </div>
+                    </li>
+                    <li>
+                        <a rel="#">电脑/办公</a>
+                        <div class="second-menu">
+                            <dl class="clearfix">
+                                <dt><a rel="#">懒得写了</a></dt>
+                            </dl>
+                        </div>
+                    </li>
+                    <li>
+                        <a rel="#">家具/家居/家装/厨具</a>
+                        <div class="second-menu">
+                            <dl class="clearfix">
+                                <dt><a rel="#">这也懒得写</a></dt>
+                            </dl>
+                        </div>
+                    </li>
+                    <li><a rel="#">男装/女装/童装/内衣</a></li>
+                    <li><a rel="#">美妆/个护清洁/宠物</a></li>
+                    <li><a rel="#">女鞋/箱包/钟表/珠宝</a></li>
+                    <li><a rel="#">男鞋/运动/户外</a></li>
+                    <li><a rel="#">房产/汽车/汽车用品</a></li> 
+                    <li><a rel="#">母婴/玩具乐器</a></li> 
+                    <li><a rel="#">食品/酒类/生鲜/特产</a></li> 
+                    <li><a rel="#">安装/维修/清洗/二手</a></li>
+                    <li><a rel="#">文娱/教育/电子书</a></li>
+                    <li><a rel="#">机票/酒店/旅游/生活</a></li>
+                    <li><a rel="#">医药保健/计生情趣</a></li>        
+                </ul>
+                <div class="banner leftfix">
+                    <img src="./images/assets/彩蛋.png" alt="大菠萝">
+                </div>
+                <div class="side-others leftfix">
+                    <div class="message">
+                        <div class="title clearfix">
+                            <span class="leftfix">鲸嘻快报</span>
+                            <a rel="#" class="rightfix">更多&nbsp;&gt;</a>
+                        </div>
+                        <ul class="msg-list">
+                            <li><a href="#">【felling】每次购物像迷失在宝藏世界!</a></li>
+                            <li><a href="#">【joking】只剩我对着账单默默流泪~</a></li>
+                            <li><a href="#">【felling】每次都是钱跑得无影无踪!</a></li>
+                            <li><a href="#">【felling】有用但不知道啥时候用得上!</a></li>
+                        </ul>
+                    </div>
+                    <div class="card-nav">
+                        <ul class="clearfix">
+                            <li>
+                                <div class="pic" id="pic1"></div>
+                                <span>话费</span>
+                            </li>
+                            <li>
+                                <div class="pic" id="pic2"></div>
+                                <span>火车票</span>
+                            </li>
+                            <li>
+                                <div class="pic" id="pic3"></div>
+                                <span>加油卡</span>
+                            </li>
+                            <li>
+                                <div class="pic" id="pic4"></div>
+                                <span>账单</span>
+                            </li>
+                        </ul>
+                        <ul class="clearfix">
+                            <li>
+                                <div class="pic" id="pic5"></div>
+                                <span>电影票</span>
+                            </li>
+                            <li>
+                                <div class="pic" id="pic6"></div>
+                                <span>酒店</span>
+                            </li>
+                            <li>
+                                <div class="pic" id="pic7"></div>
+                                <span>理财</span>
+                            </li>
+                            <li>
+                                <div class="pic" id="pic8"></div>
+                                <span>机票</span>
+                            </li>
+                        </ul>
+                        <ul class="clearfix">
+                            <li>
+                                <div class="pic" id="pic9"></div>
+                                <span>礼品卡</span>
+                            </li>
+                            <li>
+                                <div class="pic" id="pic10"></div>
+                                <span>彩票</span>
+                            </li>
+                            <li>
+                                <div class="pic" id="pic11"></div>
+                                <span>游戏</span>
+                            </li>
+                            <li>
+                                <div class="pic" id="pic12"></div>
+                                <span>众筹</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+           </div>
     </body>
 </html>
