--- a/index.html
+++ b/index.html
@@ -215,6 +215,47 @@
                     </div>
                 </div>
             </div>
-           </div>
+        </div>
+        <!-- 页脚 -->
+         <div class="footer">
+            <div class="container">
+                <div class="top-links clearfix">
+                    <div class="item">
+                        <ul>
+                            <li><a href="#">购物指南</a></li>
+                            <li><a href="#">购物流程</a></li>
+                            <li><a href="#">会员介绍</a></li>
+                            <li><a href="#">常见问题</a></li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <ul>
+                            <li><a href="#">配送方式</a></li>
+                            <li><a href="#">上门自提</a></li>
+                            <li><a href="#">24h送达</a></li>
+                            <li><a href="#">服务标准</a></li>
+                            <li><a href="#">同城快送</a></li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <ul>
+                            <li><a href="#">支付方式</a></li>
+                            <li><a href="#">货到付款</a></li>
+                            <li><a href="#">在线支付</a></li>
+                            <li><a href="#">花呗分期</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div class="bottom-links">
+                    <ul class="clearfix">
+                        <li><a href="#">关于我们</a></li>
+                        <li><a href="#">联系我们</a></li>
+                        <li><a href="#">加入我们</a></li>
+                        <li><a href="#">打赏我们</a></li>
+                    </ul>
+                </div>
+            </div>
+         </div>
     </body>
 </html>
